update api doc to work properly
