# swagger/v1/swagger.yaml
@@ -2,9 +2,17 @@ openapi: 3.0.3
 info:
   title: Transportation Management API Documentation
   version: v1
+  contact:
+    name: API Support
+    email: usamatahir159@gmail.com
+    url: https://example.com/support
+  termsOfService: https://example.com/terms
+  license:
+    name: MIT
+    url: https://opensource.org/licenses/MIT
 paths:
 
-  /api/v1/drivers:
+  /drivers:
     post:
       summary: Create Driver
       description: Creates a new driver and returns a JWT token.
@@ -28,7 +36,7 @@ paths:
                       type: string
                       example: password123
       responses:
-        '201':
+        '200':
           description: Driver created successfully
           content:
             application/json:
@@ -51,28 +59,25 @@ paths:
                       type: string
                       example: Email can't be blank
 
-
-
-  /api/v1/drivers/login:
+  /drivers/login:
     post:
       summary: Driver Login
       description: Logs in a driver and retrieves a JWT token for authentication.
       tags:
         - Drivers
-      requestBody:
-        description: Driver login credentials
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                  example: driver@example.com
-                password:
-                  type: string
-                  example: password123
+      parameters:
+        - name: email
+          in: query
+          description: User Email
+          required: true
+          schema:
+            type: string
+        - name: password
+          in: query
+          description: password
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: OK
@@ -95,12 +100,14 @@ paths:
                     type: string
                     example: Invalid credentials
 
-  /api/v1/trucks:
+  /trucks:
     get:
       summary: Get All Trucks
       description: Retrieves a list of all available trucks.
       tags:
         - Trucks
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: OK
@@ -137,26 +144,21 @@ paths:
                     type: string
                     example: No trucks found
 
-  /api/v1/trucks/assign:
+  /trucks/assign:
     post:
       summary: Assign Truck to Driver
       description: Assigns a truck to a driver.
       tags:
         - Trucks
-      requestBody:
-        description: Truck and Driver assignment details
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                truck_id:
-                  type: integer
-                  example: 1
-                driver_id:
-                  type: integer
-                  example: 2
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: truck_id
+          in: query
+          description: Truck Id
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: Truck assigned successfully
@@ -190,12 +192,14 @@ paths:
                     items:
                       type: string
 
-  /api/v1/trucks/assigned:
+  /trucks/assigned:
     get:
       summary: Get Assigned Trucks
       description: Retrieves a list of all trucks assigned to drivers.
       tags:
         - Trucks
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: OK
@@ -225,3 +229,10 @@ paths:
                   error:
                     type: string
                     example: No assigned trucks found
+
+components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
